让 Vercel 直接服务静态资源（root 与 SPA），只有以 /api/ 开头的请求才转发到index.py

--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,12 @@
       "dest": "/api/index.py"
     },
     {
+      "src": "/",
+      "dest": "/src/static/index.html"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/api/index.py"
+      "dest": "/src/static/index.html"
     }
   ]
 }
